# simple-bitcoin-rust

./: Cargo.toml  README.md  justfile  rustfmt.toml
lib/: Cargo.toml
lib/src/: crypto.rs  lib.rs  network.rs  sha256.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  mod.rs  transaction.rs
miner/: Cargo.toml
miner/accounts/: alice.priv.cbor  alice.pub.pem
miner/src/: main.rs
node/: Cargo.toml
node/data/: block.cbor  blockchain.cbor  tx.cbor
node/src/: handler.rs  main.rs  util.rs
wallet/: Cargo.toml
